Source/WTF/wtf/BitVector.h
@@ -357,6 +357,8 @@ public:
         return byteCount(size());
     }
         
+    WTF_EXPORT_PRIVATE void shiftRightByMultipleOf64(size_t);
+
 private:
     friend class JSC::CachedBitVector;
 
@@ -461,7 +463,7 @@ private:
     const OutOfLineBits* outOfLineBits() const { return bitwise_cast<const OutOfLineBits*>(m_bitsOrPointer << 1); }
     OutOfLineBits* outOfLineBits() { return bitwise_cast<OutOfLineBits*>(m_bitsOrPointer << 1); }
     
-    WTF_EXPORT_PRIVATE void resizeOutOfLine(size_t numBits);
+    WTF_EXPORT_PRIVATE void resizeOutOfLine(size_t numBits, size_t shiftInWords = 0);
     WTF_EXPORT_PRIVATE void setSlow(const BitVector& other);
     
     WTF_EXPORT_PRIVATE void mergeSlow(const BitVector& other);
